--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,14 +1,34 @@
-name: GitHub Metrics
+name: Metrics
 on:
-  schedule: 
-    - cron: "0 0 * * *"  # Runs daily
+  # Schedule updates
+  schedule:
+    - cron: "0 0 * * *"
+  # Lines below let you run workflow manually and on each commit
+  push:
+    branches:
+      - master
   workflow_dispatch:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - name: Generate GitHub Metrics
-        uses: lowlighter/metrics@latest
+      # See action.yml for all options
+      - uses: lowlighter/metrics@v3.18
         with:
-          filename: metrics.svg
+          # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
+          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          # ... other options
+          user: davide-giacomini
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Rome
+          plugin_followup: no
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          plugin_languages: no
+          plugin_stars: no
+          plugin_gist: no
+          plugin_people: no
+          plugin_topics: no
