--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,3 +17,16 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          # ... other options
+          user: davide-giacomini
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: Europe/Rome
+          plugin_followup: no
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          plugin_languages: no
+          plugin_stars: no
+          plugin_gist: no
+          plugin_people: no
+          plugin_topics: no
